--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ minecraft {
     runDir = "eclipse/assets"
 }
 archivesBaseName = "LevelUp!"
-version = "0.5"
+version = "0.6"
+group = "com.github.levelup"
 sourceSets.main.java{srcDirs project.projectDir.getPath() include('assets/**')}
 sourceSets.main.resources{srcDirs project.projectDir.getPath() include('assets/**', 'mcmod.info', '*.mcmeta', '*META-INF/**')}
 processResources {
