Fixed issues and publish new release

--- a/META-INF/levelup_at.cfg
+++ b/META-INF/levelup_at.cfg
@@ -7,3 +7,4 @@ public net.minecraft.tileentity.TileEntityFurnace func_145948_k()Z #canCook
 public net.minecraft.entity.projectile.EntityFishHook field_146039_d #junk
 public net.minecraft.entity.projectile.EntityFishHook field_146041_e #treasure
 public net.minecraft.entity.projectile.EntityFishHook field_146036_f #fish
+public net.minecraft.entity.projectile.EntityFishHook field_146045_ax #randomizedFishingTimer
