--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ buildscript {
     }
 }
 apply plugin: 'forge'
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 minecraft {
-    version = "1.7.10-10.13.0.1184"
-    runDir = "eclipse/assets"
+    version = "1.7.10-10.13.2.1230"
+    runDir = "eclipse"
 }
 archivesBaseName = "LevelUp!"
 version = "0.7"
