--- a/META-INF/levelup_at.cfg
+++ b/META-INF/levelup_at.cfg
@@ -1,10 +1,7 @@
 #LevelUp! Access Transformer configuration file
 #ContainerFurnace
-public net.minecraft.inventory.ContainerFurnace field_75158_e #furnace
+public net.minecraft.inventory.ContainerFurnace field_75158_e #tileFurnace
 #TileEntityFurnace
-public net.minecraft.tileentity.TileEntityFurnace func_145948_k()Z #canCook
-#EntityFishHook loot lists
-public net.minecraft.entity.projectile.EntityFishHook field_146039_d #junk
-public net.minecraft.entity.projectile.EntityFishHook field_146041_e #treasure
-public net.minecraft.entity.projectile.EntityFishHook field_146036_f #fish
-public net.minecraft.entity.projectile.EntityFishHook field_146045_ax #randomizedFishingTimer
+public net.minecraft.tileentity.TileEntityFurnace func_145948_k()Z #canSmelt
+#EntityFishHook
+public net.minecraft.entity.projectile.EntityFishHook field_146045_ax #ticksCatchable
